style(imageFrame): fix image size on mobile devices

--- a/src/components/Home/AboutSection/ImageFrame/ImageFrame.module.scss
+++ b/src/components/Home/AboutSection/ImageFrame/ImageFrame.module.scss
@@ -21,11 +21,9 @@
 
 @media (max-width: 420px) {
   .imageFrame {
-    width: auto !important;
-    height: auto !important;
-    min-width: 80%;
-    min-height: 80%;
-    margin-left: 16px;
+    width: 70vw !important;
+    height: 70vw !important;
+    margin-left: 7.1vw;
   }
 }
 
